<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.garciaapps.botoesdememe.TabActivity">

    <!--
    <item
        android:id="@+id/favoritos"
        android:orderInCategory="100"
        android:title="@string/favoritos"
        app:showAsAction="never" />
    -->
    <item android:id="@+id/action_search"
        android:title="@string/buscarItem"
        android:icon="@drawable/icone_buscar"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item android:id="@+id/refresh"
        android:title="@string/atualizar"
        android:icon="@mipmap/refresh_icon"
        app:showAsAction="ifRoom"/>

    <group android:id="@+id/grupoItem">
        <item android:id="@+id/action_favoritos"
            android:orderInCategory="100"
            android:title="@string/favoritos"
            app:showAsAction="never"/>

        <item android:id="@+id/action_sugestao"
            android:orderInCategory="200"
            android:title="@string/sugestao"
            app:showAsAction="never"/>
    </group>

</menu>
