<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/linearSugestao"
        android:layout_above="@+id/adViewSugestao"
        android:layout_marginBottom="180dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarSugestao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?android:attr/actionBarSize"
            android:theme="@style/Widget.AppCompat.ActionBar"
            android:padding="0dp"
            android:gravity="center"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                android:text="@string/txtSugestao"
                android:textColor="@color/colorAccent"
                android:textSize="25sp" />

            </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textoSugestao"
            android:textSize="15sp"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            />

        <EditText
            android:id="@+id/txtSugestao"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.17"
            android:ems="10"
            android:gravity="top|start"
            android:background="@drawable/edittext_bg"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <Button
            android:id="@+id/botaoEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enviar"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorAccent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewSugestao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_bottom"/>

</RelativeLayout>